--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,1 +1,9 @@
-<footer>this is header</footer>
+<footer class="mainFooter">
+<p class="footerContent">this is footer</p>
+<div class="footerButtons">
+    <a href="/">Home</a>
+    <a href="/users/profile">Profile</a>
+</div>
+</footer>
+
+<link rel="stylesheet" href="/css/footer.css">
