--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,6 @@
+<h2>this is my heading <%= message %></h2>
 
-    <h2>this is my heading <%= message %></h2>
+<form action="/Post/createPost" id="postForm" method="post">
+    <textarea name="Content"cols="30" rows="5" placeholder="Write here..."></textarea>
+    <input type="submit" value="Post">
+</form>
