--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/layout.css">
     <%- style %>
     <title>layout</title>
 </head>
 <body>
-    <h1>this is layout</h1>
     <%- include('header') %>
-    <%- body %>
+    <main class="main">
+        <%- body %>
+    </main>
     <%- include('footer') %>
 </body>
 </html>
