--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,2 +1,3 @@
 <h1>this is user Profile</h1>
-<link rel="stylesheet" href="/css/style.css">
+<p> <%= user.FullName  %> </p>
+<p> <%= user.Email  %> </p>
